<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    tools:context=".LoginActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/icon_circle_login"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="#00ffffff"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/icon_profil_login"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:background="#ffffff"
            android:textSize="22sp"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:layout_marginTop="30dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:textSize="22sp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/btn_login_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login"
            android:textSize="22sp"
            android:background="@color/purple_200"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/belum_punya_akun_daftar"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</LinearLayout>