<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_menu"
    tools:context=".MenuActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bg_navbar"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/icon_circle_nav"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/bank_soal"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/icon_search_nav"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilih_soal"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_margin="30dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/tuna_rungu"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="@color/black"
            android:backgroundTint="#E0F1FF"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/tuna_netra"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="@color/black"
            android:backgroundTint="#E0F1FF"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="TUNA WICARA"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="20dp"
            android:textColor="@color/black"
            android:backgroundTint="#E0F1FF"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_navbar"
        android:visibility="visible"
        app:labelVisibilityMode="unlabeled"
        android:layout_marginTop="-60dp"
        app:itemIconSize="40dp"
        app:itemIconTint="@drawable/tab_color"
        app:menu="@menu/nav_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>